Fixed Chat Delete Button Being Under Scrollbar

--- a/assets/main.css
+++ b/assets/main.css
@@ -505,3 +505,6 @@ div#rs-dialog-ccc {
 .chat-main {
     padding-right: 0px !important;
 }
+.chatDelete {
+    padding-right: 1.3rem !important;
+}
